--- a/templates/emperor.ini
+++ b/templates/emperor.ini
@@ -9,7 +9,7 @@ chdir        =  %d
 max-fd       =  8192
 
 # runtime dir for unix sockets if needed
-exec-as-root = install -d /run/uwsgi -g www-data -m770
+exec-as-root = install -d /run/uwsgi -g webtactics -m770
 
 {% if uwsgi_tyrant_mode %}
 # tyrant mode
