--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,7 +29,7 @@
   notify: restart the uwsgi emperor
 
 - name: Create a separate directory for uwsgi log files
-  file: state=directory path=/var/log/uwsgi mode=0770 owner=root group=www-data
+  file: state=directory path=/var/log/uwsgi mode=0770 owner=root group=webtactics
 
 - name: Setup upstart job for the emperor
   copy: src=upstart.conf dest=/etc/init/uwsgi.conf mode=0644 owner=root group=root
